overflow bug

--- a/src/Stylesheets/_notelist.scss
+++ b/src/Stylesheets/_notelist.scss
@@ -34,6 +34,8 @@
             height:325px;
             padding:15px;
             .preview-text{
+                height:inherit;
+                overflow: hidden;
                 font-size:1.6rem;
                 color:$primaryClr;
             }
